# imgui4cj

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_cimgui.sh  build_imgui4cj_c_lib.ps1  build_imgui4cj_c_lib.sh  cjpm.toml  generate.ps1  generate.sh  generate_capi.sh
.github/workflows/: build-and-package.yml  cmake-multi-platform.yml
c_src/: cimgui_struct_accessors.c  glfw_opengl3_backend.c  imgui4cj.h  load_image.c
docs/: backends.md  imgui_global_functions.md  imgui_structs.md
examples/basic_widgets/: cjpm.toml
examples/basic_widgets/src/: main.cj
examples/capi/helloworld/: cjpm.toml
examples/capi/helloworld/src/: main.cj
examples/helloworld/: cjpm.toml
examples/helloworld/src/: main.cj
generator/: cjpm.toml
generator/src/: gen_capi_pkg.cj  gen_enums.cj  gen_funcs.cj  gen_structs.cj  gen_typedefs.cj  main.cj  utils.cj
imgui/: cjpm.toml
imgui/src/capi/: cimgui.cj  cimgui_impl.cj
src/: imgui.cj
src/_capi/: cimgui.cj  cimgui_impl.cj  enums.cj  structs.cj  typedefs.cj  undef_structs.cj
src/backends/: backend.cj  glfw_opengl3_backend.cj  sdl3_opengl3_backend.cj
src/capi/: capi.cj  cimgui.cj  enums.cj  structs.cj  typedefs.cj  undef_structs.cj
src/capi_impl/: cimgui.cj  cimgui_impl.cj  enums.cj  funcs.cj  struct_accessors.cj  structs.cj  typedefs.cj  undef_structs.cj
src/macros/: default_args.cj  state.cj
src/utils/: image.cj
src/wcapi/: basic.cj  funcs.cj  re_exports.cj  structs.cj
